src/objects/LeanData__CC_Updated_Lead__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Is_Insert__c</fullName>
        <label>Is Insert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Processed__c</fullName>
        <label>Is Processed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>CC_Updated_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Updated Lead</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC_Updated_Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Updated Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>